updated inseam page

--- a/inseam.html
+++ b/inseam.html
@@ -31,16 +31,16 @@
 <body>
 <h1>InSEAM (<u>In</u>VEST <u>S</u>c<u>e</u>n<u>a</u>rio <u>M</u>odeler)</h1>
 <img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview</h2>
-InSEAM is a participatory geographic information system (GIS) that allows multiple users to draw features on a base map.  Rather than mailing paper maps to stakeholders, it allows your team to convene over the Internet and share spatial information.   These drawings and annotations can then be compiled and downloaded as digital layers to faciliate the scenario development process.  InSEAM requires an Internet connection so it may not be the right tool in remote places with limited bandwidth.  Nevertheless, we have found that people tend to trust data more when they participate in its collection.  Allowing people to get involved in ecosystem service citizen science can be an extremely useful means to collect data and understand how your study area will change over time.<br>
+InSEAM is a participatory geographic information system (PGIS) that allows multiple users to draw features on a base map.  Rather than mailing paper maps to stakeholders, it allows your team to convene over the Internet and share spatial information.   These drawings and annotations can then be compiled and downloaded as digital layers to faciliate the scenario development process.  InSEAM requires an Internet connection so it may not be the right tool in remote places with limited bandwidth.  Nevertheless, we have found that people tend to trust data more when they participate in its collection.  Allowing people to get involved in ecosystem service citizen science can be an extremely useful means to collect data and understand how your study area will change over time.<br>
 <p></p>
 <ul id="folio_scroller">
-<li><iframe src="http://www.youtube.com/embed/OZQ8OOs7QHQ?autoplay=1" width="600" height="300" frameborder="0" allowfullscreen></iframe></li>
+<li><iframe src="http://www.youtube.com/embed/fxJfn-NOjGM?autoplay=1" width="600" height="300" frameborder="0" allowfullscreen></iframe></li>
 </ul>
 <p></p><br>
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/links_sm.png" align="left"><h2>&nbsp;&nbsp;Links</h2>
 <ul>
-<li><a href="http://umap.fluv.io/en/map/san-francisco_2368" target="_blank"><b>InSEAM Test Link</b></a> - Try InSEAM on your own!</li>
+<li><a href="http://umap.fluv.io/en/map/san-francisco_2368" target="_blank"><b>InSEAM Test Link (San Francisco Bay Area)</b></a> - Try InSEAM on your own!</li>
 <li><i>Would you like to use InSEAM for free with your organization?  <a href="mailto:gverutes@stanford.edu?Subject=InSEAM" target="_top">E-mail us</a> for details!</i></li>
 <p></p>
 <a class="float right" href="#">top</a>
