Major updates to HTML
Scope, Data, Communicate -- plus other minor edits.

--- a/frame.html
+++ b/frame.html
@@ -17,7 +17,7 @@
 <img src="img/logo_Concierge.png">
 <br><br>
 <ul id="menu-v">
-	<li><a href="welcome.html" target="content">Home</a>
+	<li><a href="welcome.html" target="content"><b>Home</b></a>
 	</li>
     <li><a href="scope.html" target="content">1. Scope</a>
     </li>
@@ -39,7 +39,7 @@
 	<li></li>
 	<li><a href="gallery.html" target="content">Gallery</a></li>
 	<li><a href="links.html" target="content">Links</a></li>
-	<li><a href="contact.html" target="content">Contact</a></li>
+	<li><a href="contact.html" target="content">Contact |<br>MSP Use-Cases</a></li>
 </ul>
 </body>
 </html>
