--- a/links.html
+++ b/links.html
@@ -152,6 +152,7 @@ Use the expand [+] button to explore readings and other online resources for eac
 <h4>Cross-Cutting Steps</h4>
 <ul>
 <li>Beck, M., et al. "Best practices for marine spatial planning." The Nature Conservancy, Arlington, VA (2009): 25. <a href="http://www.marineplanning.org/pdf/msp_best_practices.pdf" target="_blank">http://www.marineplanning.org/pdf/msp_best_practices.pdf</a></li>
+<li>Douvere, F. (2008). "The importance of marine spatial planning in advancing ecosystem-based sea use management." <i>Marine Policy</i>, 32(5), 762-771. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X0800064X" target="_blank">doi:10.1016/j.marpol.2008.03.021</a></li>
 <li>Rosenthal, Amy, et al. "Process matters: a framework for conducting decision-relevant assessments of ecosystem services." <i>International Journal of Biodiversity Science, Ecosystem Services & Management</i> (2014): 1-15. <a href="docs/Rosenthal_etal_2014_IJBSESM.pdf" target="_blank">doi:10.1080/21513732.2014.966149</a></li>
 <li>Ruckelshaus, Mary, et al. "Notes from the field: Lessons learned from using ecosystem service approaches to inform real-world decisions." <i>Ecological Economics</i> (2013). <a href="docs/Ruckelshaus_etal_2014_EE.pdf" target="_blank">doi:10.1016/j.ecolecon.2013.07.009</a></li>
 <li><a href="http://openchannels.org/" target="_blank"><b>OpenChannels</b></a> - An online community of ocean planners and managers sharing experience, knowledge, and advice with peers</li>
@@ -163,15 +164,22 @@ Use the expand [+] button to explore readings and other online resources for eac
 <div class="hr dotted clearfix">&nbsp;</div>
 <h4>1. Scope</h4>
 <ul>
-<li>Douvere, F. (2008). "The importance of marine spatial planning in advancing ecosystem-based sea use management." <i>Marine Policy</i>, 32(5), 762-771. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X0800064X" target="_blank">doi:10.1016/j.marpol.2008.03.021</a></li>
-<li>Foley, Melissa M., et al. "Guiding ecological principles for marine spatial planning." <i>Marine Policy</i> 34.5 (2010): 955-966. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X10000436" target="_blank">doi:10.1016/j.marpol.2010.02.001</a></li>
-<li>Ehler, Charles, and Fanny Douvere. "Marine spatial planning, a step-by-step approach towards ecosystem-based management." (2009). <a href="http://hdl.handle.net/1834/4475
-" target="_blank">http://hdl.handle.net/1834/4475</a></li>
+<li>Ehler, Charles, and Fanny Douvere. "Marine spatial planning, a step-by-step approach towards ecosystem-based management." (2009). <a href="http://www.unesco-ioc-marinesp.be/uploads/documentenbank/d87c0c421da4593fd93bbee1898e1d51.pdf
+" target="_blank">http://hdl.handle.net/1834/4475</a> (See "Steps 1-5", pp. 26-62)</li>
+<li>Foley, Melissa M., et al. "Guiding ecological principles for marine spatial planning." <i>Marine Policy</i> 34.5 (2010): 955-966. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X10000436" target="_blank">    doi:10.1016/j.marpol.2010.02.001</a> (See "Section 3. Application")</li>
+<li>Halpern, Benjamin S., et al. "Near-term priorities for the science, policy and practice of Coastal and Marine Spatial Planning (CMSP)." <i>Marine Policy</i> 36.1 (2012): 198-205.<a href="http://www.sciencedirect.com/science/article/pii/S0308597X11000935" target="_blank"> doi:10.1016/j.marpol.2011.05.004</a> (See "Section 2.1. Process")</li>
+<li>Rosenthal, Amy, et al. "Process matters: a framework for conducting decision-relevant assessments of ecosystem services." <i>International Journal of Biodiversity Science, Ecosystem Services & Management</i> (2014): 1-15. <a href="docs/Rosenthal_etal_2014_IJBSESM.pdf" target="_blank">doi:10.1080/21513732.2014.966149</a> (See "Section 4.1. Scope")</li>
+<li>Waite, Richard, et al. "Coastal capital: ecosystem valuation for decision making in the Caribbean</a>." World Resources Institute, 2014. <a href="http://eprints.soton.ac.uk/362289/" target="_blank">http://eprints.soton.ac.uk/id/eprint/362289</a> (See "Phase 1: Scope", pp. 15-24)</li>
+<li><a href="http://openchannels.org/" target="_blank"><b>OpenChannels</b></a> - An online community of ocean planners and managers sharing experience, knowledge, and advice</li>
 <li><a href="http://searchmesh.org/default.aspx?page=1931" target="_blank"><b>MESH Scoping Tool</b></a> - A Flash interactive tool and guidance for undertaking an ocean  mapping/survey project</li>
+<li><a href="http://marineecosystemservices.org/" target="_blank"><b>Marine Ecosystem Services Partnership</b></a> - A searchable database of nearly 900 studies on marine ES valuation</li>
+<li><a href="http://bluesolutions.info/solutions/" target="_blank"><b>Blue Solutions</b></a> - A database of solutions to coastal-marine challenges that are impactful, scalable, and can be replicated</li>
+<li><a href="http://www.cmspadvancement.com/" target="_blank"><b>CMSP Advancement Training</b></a> - Free training in the United States for coastal managers and MSP practitioners</li>
 </ul>
 <div class="hr dotted clearfix">&nbsp;</div>
 <h4>2. Data</h4>
 <ul>
+<li><a href="data.html#databases"><b>MSP Databases</b></a></li>
 <li>Cornu, Elodie, et al. "Current Practice and Future Prospects for Social Data in Coastal and Ocean Planning." <i>Conservation Biology</i> (2014). <a href="http://onlinelibrary.wiley.com/doi/10.1111/cobi.12310/full" target="_blank">doi:10.1111/cobi.12310</a></li>
 <li>Kittinger, John N., et al. "A practical approach for putting people in ecosystem-based ocean planning." <i>Frontiers in Ecology and the Environment</i> 12.8 (2014): 448-456. <a href="http://dx.doi.org/10.1890/130267" target="_blank">http://dx.doi.org/10.1890/130267</a></li>
 <li>Koehn, J. Zachary, Daniel R. Reineman, and John N. Kittinger. "Progress and promise in spatial human dimensions research for ecosystem-based ocean planning." <i>Marine Policy</i> 42 (2013): 31-38. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X13000249" target="_blank">doi:10.1016/j.marpol.2013.01.015</a></li>
@@ -211,10 +219,16 @@ Use the expand [+] button to explore readings and other online resources for eac
 <div class="hr dotted clearfix">&nbsp;</div>
 <h4>6. Communicate</h4>
 <ul>
+<li>Baron, Nancy. Escape from the ivory tower: a guide to making your science matter. <i>Island Press</i>, 2010.</li>
+<li>Cash, David W., et al. "Knowledge systems for sustainable development." <i>Proceedings of the National Academy of Sciences</i> 100.14 (2003): 8086-8091. <a href="http://www.pnas.org/content/100/14/8086.full" target="_blank">doi: 10.1073/pnas.1231332100</a></li>
 <li>Ehler, Charles. "Conclusions: benefits, lessons learned, and future challenges of marine spatial planning." <i>Marine Policy</i> 32.5 (2008): 840-843. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X08000730" target="_blank">doi:10.1016/j.marpol.2008.03.014</a></li>
 <li>Merrie, Andrew, and Per Olsson. "An innovation and agency perspective on the emergence and spread of Marine Spatial Planning." <i>Marine Policy</i> 44 (2014): 366-374. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X13002315" target="_blank">doi:10.1016/j.marpol.2013.10.006</a></li>
-<li>Waite, Richard, et al. "Coastal capital: ecosystem valuation for decision making in the Caribbean</a>." World Resources Institute, 2014. <a href="http://eprints.soton.ac.uk/362289/" target="_blank">http://eprints.soton.ac.uk/id/eprint/362289</a></li>
-<li><a href="http://cartodb.com/" target="_blank"><b>CartoDB.com</b></a> and <a href="http://mapbox.com/" target="_blank"><b>Mapbox.com</b></a> - Free online tools for building professional web maps</li>
+<li>McKenzie, Emily, et al. "Understanding the use of ecosystem service knowledge in decision making: lessons from international experiences of spatial planning." <i>Environment and Planning C: Government and Policy</i> 32.2 (2014) <a href="http://www.envplan.com/abstract.cgi?id=c12292j" target="_blank">doi:10.1068/c12292j</a></li>
+<li>Olson, Randy. Don't be such a scientist: talking substance in an age of style. <i>Island Press</i>, 2010.</li>
+<li>Waite, Richard, et al. "Coastal capital: ecosystem valuation for decision making in the Caribbean</a>." World Resources Institute, 2014. <a href="http://eprints.soton.ac.uk/362289/" target="_blank">http://eprints.soton.ac.uk/id/eprint/362289</a> (See "Phase 3: Outreach and Use of Results", pp. 53-56)</li>
+<li><a href="http://storymaps.arcgis.com/en/" target="_blank"><b>ESRI Story Maps</b></a> - Combine interactive maps and multimedia content to tell stories with maps</li> 
+<li><a href="http://rdc.moabi.org/reports/en/" target="_blank"><b>MOABI DRC</b></a> - Provides story maps based on collaborative monitoring of natural resource use in the Democratic Republic of the Congo</li>
+<li><a href="http://cartodb.com/" target="_blank"><b><a href="http://mapbox.com/" target="_blank"><b>Mapbox.com</b> and CartoDB.com</b></a> - Free online tools for building professional story maps</li>
 </ul>
 <a class="float right" href="#">top</a>
 <p></p><br>
