--- a/reg_msp_data.html
+++ b/reg_msp_data.html
@@ -177,6 +177,71 @@ var geojson = {
             coordinates: [-98, 38.5]
         }
     },	
+	{
+        type: 'Feature',
+        properties: {
+            title: 'Coastal Hazards Database for Latin America and the Caribbean (C3A)',
+            'marker-color': '#19a9e5',
+            'marker-size': 'small',
+            url: 'http://www.c3a.ihcantabria.com/'
+        },
+        geometry: {
+            type: 'Point',
+            coordinates: [-65, -16.8]
+        }
+    },	
+	{
+        type: 'Feature',
+        properties: {
+            title: 'US Census Bureau',
+            'marker-color': '#19a9e5',
+            'marker-size': 'small',
+            url: 'http://www.census.gov/data/data-tools.html'
+        },
+        geometry: {
+            type: 'Point',
+            coordinates: [-77.0164, 38.9047]
+        }
+    },
+	{
+        type: 'Feature',
+        properties: {
+            title: 'UK Office for National Statistics',
+            'marker-color': '#19a9e5',
+            'marker-size': 'small',
+            url: 'http://www.ons.gov.uk/ons/guide-method/geography/products/census/index.html'
+        },
+        geometry: {
+            type: 'Point',
+            coordinates: [-5, 55]
+        }
+    },	
+	{
+        type: 'Feature',
+        properties: {
+            title: 'Gulf of Mexico Data Atlas',
+            'marker-color': '#19a9e5',
+            'marker-size': 'small',
+            url: 'http://gulfatlas.noaa.gov/'
+        },
+        geometry: {
+            type: 'Point',
+            coordinates: [-90, 25]
+        }
+    },	
+	{
+        type: 'Feature',
+        properties: {
+            title: 'NOAA National Centers for Environmental Information (NCEI)',
+            'marker-color': '#19a9e5',
+            'marker-size': 'small',
+            url: 'https://ncei.noaa.gov/'
+        },
+        geometry: {
+            type: 'Point',
+            coordinates: [-105.2519, 40.02]
+        }
+    },	
 ]
 };
 
