--- a/synthesize.html
+++ b/synthesize.html
@@ -175,20 +175,30 @@ The overarching goal of the Synthesize step is to ensure that the outputs of you
 <a name="tools"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tools_sm.png" align="left"><h2>&nbsp;&nbsp;Helper Tools</h2>
 <img src="img/off_ramp.png"><br>
-Synthesizing outputs from decision-support tools can be challenging. NatCap has created helper tools that enable InVEST users to quickly explore outputs and perform basic post-processing. The following are links to examples of InVEST helper tools: 
-<ol>
-<li><a href="http://forum.naturalcapitalproject.org/index.php?p=/discussion/452/new-visualization-tools-for-coastal-vulnerability-recreation-models#latest" target="_blank"><b>InVEST Dashboard</b></a> apps automate common synthesis and visualization tasks that may be necessary after running InVEST.
+Synthesizing outputs from decision-support tools can be challenging. NatCap has created helper tools that enable InVEST users to quickly explore outputs and perform basic post-processing. The following are links to examples of InVEST helper tools:<br>
+<p></p>
+<a href="http://forum.naturalcapitalproject.org/index.php?p=/discussion/452/new-visualization-tools-for-coastal-vulnerability-recreation-models#latest" target="_blank"><b><u>InVEST Dashboard</u></b></a> apps automate common synthesis and visualization tasks that may be necessary after running InVEST.
 <br>&#8226; &nbsp;Explore InVEST outputs in a web browser, including an interactive webmap
 <br>&#8226; &nbsp;Share results with colleagues by simply sending a link and a zip file
 <br>&#8226; &nbsp;Compare scenarios with the Dashboard's standardized symbologies
 <br>&#8226; &nbsp;Quickly diagnose issues in the model outputs, save time and run more simulations
-<br>&#8226; &nbsp;Dashboards are currently available for <a href"http://vulpes.sefs.uw.edu/ttapp/cv-dash.php"><b>Coastal Vulnerability</b></a> and <a href"http://vulpes.sefs.uw.edu/ttapp/rec-dash.php"><b>Recreation</b></a> models.</li>
- <p></p>
+<br>Try our dashboards using sample data for InVEST <a href="http://vulpes.sefs.uw.edu/ttapp/cv-dash.php" target="_blank">coastal vulnerability</a>, <a href="http://vulpes.sefs.uw.edu/ttapp/rec-dash.php" target="_blank">recreation</a>, and <a href="http://vulpes.sefs.uw.edu/ttapp/hra-dash.php" target="_blank">habitat risk assessment (HRA) </b></a>models.</li>
+<p></p>
+<ul id="folio_scroller">
+<li><iframe src="http://www.youtube.com/embed/oLMwVdGzpmc?autoplay=1" width="600" height="300" frameborder="0" allowfullscreen></iframe></li>
+</ul>
+<p></p><br>
+Other helpful off-ramps from InVEST include...
+<ol>
 <li><a href="http://ncp-dev.stanford.edu/~dataportal/nightly-build/release_tip/release_tip/documentation/" target="_blank"><b>InVEST 3.1.0 User's Guide</b></a> - Each chapter includes an "Interpreting Results" section that defines intermediate and final outputs of each model</li>
-<li><a href="http://tinyurl.com/cctd-belize" target="_blank"><b>Identifying Opportunities for Climate-Compatible Tourism Development in Belize</b></a><br>This online analytics tool enables users to summarize results from the <a href="http://www.naturalcapitalproject.org/models/coastal_vulnerability.html" target="_blank">InVEST coastal vulnerability model</a> through a simple website. Model outputs are linked to 2010 population census and tourism expenditure data and then visualized as maps and graphs.
-AG: ISN'T THIS MORE OF A “GALLERY” THING, NOT FOR OTHERS TO REALLY USE IN THEIR OWN WORK UNLESS THEY'VE GOT THE SKILLS TO BUILD SOMETHING LIKE IT…I DON'T THINK IT FITS WITH THE OTHERS. DF: COULD EASILY PUT THIS IN THE GALLERY. EACH GALLERY THUMBNAIL IS JUST A LINK, SO A SCREENSHOT COULD LINK TO THE LIVE WEBMAP.</li> 
-<li><a href="docs/NatCap_marineHelperTools.zip" target="_blank"><b>Marine InVEST Helper Tools</b></a> - A GIS toolbox for pre- and post-processing data to be used with InVEST models (<i>requires ArcGIS 10.x license</i>)IF WE ARE DISTRIBUTING THESE TOOLS RIGHT FROM HERE, I THINK WE NEED DOCUMENTATION TO GO WITH THEM.</li>
-<li>Visit our <a href="http://ncp-yamato.stanford.edu/natcapforums/categories/experimental-software-tools" target="_blank"><b>Experimental Software Tools</b></a> discussion thread for synthesis helper tools that are currently under development and to request tools and features that you would like to see available to make your work with InVEST easier.</li>
+<li><a href="docs/MSP_HelperToolbox.zip" target="_blank"><b>MSP Helper Tools</b></a> - A GIS toolbox with documentation for processing data inputs and outputs of InVEST (<i>requires ArcGIS license</i>)</li>
+<li>Visit our <a href="http://forums.naturalcapitalproject.org/index.php?p=/categories/experimental-software-tools" target="_blank"><b>Experimental Software Tools</b></a> discussion thread for synthesis helper tools that are currently under development and to request tools and features that you would like to see available to make your work with InVEST easier.</li>
+
+
+<li><a href="http://tinyurl.com/cctd-belize" target="_blank"><b>Identifying Opportunities for Climate-Compatible Tourism Development in Belize</b></a><br>This online analytics tool enables users to summarize results from the InVEST coastal vulnerability model through a simple website. Model outputs are linked to 2010 population census and tourism expenditure data and then visualized as maps and graphs.
+PUT THIS IN THE GALLERY. EACH GALLERY THUMBNAIL IS JUST A LINK, SO A SCREENSHOT COULD LINK TO THE LIVE WEBMAP.</li> 
+
+
 </ol>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
@@ -198,17 +208,18 @@ AG: ISN'T THIS MORE OF A “GALLERY” THING, NOT FOR OTHERS TO REALLY USE IN TH
 <b>Q: Is it possible to weigh options and compare tradeoffs if results are not in the same units?</b><br>
 <i>A: We make tradeoffs all the time where we know the cost of something and a physical measure of what we get for that cost. First, try to synthesize results in a way that conveys to your audience what is being gained and/or lost. Quantify it in biophysical, and possibly monetary terms and spell out what might be gained or lost through some management or policy action. After presenting this information (<a href="communicate.html"><b>Communicate</b></a> step) let the stakeholders and decision-makers decide. Monetizing outputs solely for the sake of producing results in a common currency may actually result in less informed decisions.  For example, in our work on the West Coast of Vancouver Island, planners were not interested in seeing monetary values for many of the services that we modeled together. One visual we used showed trade-offs amongst numerous services in different metrics including the dollar value of shellfish aquaculture harvest, the spatial extent of recreational kayaking, and the number of floathomes (Guerry et al. 2012).</i>
 <p></p>
-<b>Q: Do decision-makers always want monetary valuation of ecosystem services?</b><br>
-<i>A: No. It's not always about the money. Biophysical outputs such as the area of erosion along the coastline can be just as meaningful, as can numbers of people or poor families at risk from hazards (Arkema et al.2013, raw data from) . In particular, when cultural services, such as recreation or opportunities for culturally important activities are involved, monetary valuation can be unnecessary while in other cases it provides additional useful context (eg Arkema et al In Press, Keeler et al In Press). In many cases it is preferable to report outcomes directly in terms of impacts on human health or livelihoods (Ruckelshaus et al. 2013)-something done more successfully in the academic literature than in practice (e.g., Keeler et al. 2012, Myers et al. 2013)-but something to strive for in this kind of work.</i><br>
-<p></p>
+
 <b>Q: How do I assess tradeoffs among ecosystem services?</b><br>
 <i>A: Tradeoffs should be assessed with your project objectives and audience in mind. When multiple services can be represented using a common unit or currency (e.g., $, number of jobs, etc.), this unit can be summarized and compared across scenarios. In cases where outputs have different units (e.g., hectares of habitat, pounds of fish, number of visitors, etc.), something as simple as proportional arrows can be used to represent increase or decrease across scenarios and services.  See our <a href="gallery.html"><b>Gallery</b></a> for some synthesis ideas.</i><br>
+<p></p>
+<b>Q: How do I begin the Synthesis Step?</b><br>
+<i>A: Begin the synthesis step by going back to your scoping step and remembering what issues were most important to stakeholders and policy-makers in the reason.  Make sure you link the outputs from the InVEST models back to these issues, using additional data as necessary.  For example, if people in your region are particularly interested in the risk of coastal hazards to low income residents, consider using data from the US Census Bureau on poor families and overlaying this with outputs from the InVEST Coastal Vulnerability model to identify where coastal habitats will reduce the numbers of people at high risk to hazards (e.g., Arkema et al. 2013).</i><br>
 <p></p>
 <b>Q: Which synthesis tool(s) should I use for MSP?</b><br>
 <i>A: Try synthesizing results using methods or tools that are familiar and available to your team. We have found it helpful to synthesize InVEST results using a combination of GIS (ArcGIS or QGIS) and design software like Adobe Illustrator, Microsoft PowerPoint, or LibreOffice Impress. Languages like R or Python can also be used to produce synthetic visuals by those who are comfortable working in a coding environment. Do what works for you and be creative!</i><br>
 <p></p>
-<b>Q: How do I begin the Synthesis Step?</b><br>
-<i>A: Begin the synthesis step by going back to your scoping step and remembering what issues were most important to stakeholders and policy-makers in the reason.  Make sure you link the outputs from the InVEST models back to these issues, using additional data as necessary.  For example, if people in your region are particularly interested in the risk of coastal hazards to low income residents, consider using data from the US Census Bureau on poor families and overlaying this with outputs from the InVEST Coastal Vulnerability model to identify where coastal habitats will reduce the numbers of people at high risk to hazards (e.g., Arkema et al. 2013).</i><br>
+<b>Q: How should I present results?</b><br>
+<i>A: Because the process of MSP relies on spatial information, maps are an obvious choice for communicating results, especially spatial differences throughout a region. However, maps can be difficult to synthesize and to compare. Simple diagrams using arrows, bars, or graphs can help visualize ecosystem service synergies and trade-offs across scenarios (see some examples in the <a href="gallery.html">gallery</a>).</i><br>
 <p></p>
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/links_sm.png" align="left"><h2>&nbsp;&nbsp;Links</h2>
@@ -238,7 +249,7 @@ The team explored a variety of possible visuals to synthesize information:
 <li><span>Spider plots visualize ES synergies and tradeoffs across scenarios (baseline, industry expansion, conservation), but can be difficult for some audiences to interpret (from Guerry et al).</span><img alt="" src="img/synthesize_vi_folio_2.png" /></a></li>
 </ul> 
 <p></p><br><br><br>
-<h4>Belize -- EXPAND TO SEE COMMENT</h4><p>KA: GREGG, YOU ASKED FOR FEEDBACK ON THE CASE STUDY. I THINK WE SHOULD INCLUDE THE ONLINE LINK TO THE PLAN AND GIVE A COUPLE OF EXAMPLES OF HOW THESE DIFFERENT FIGURES WERE LINKED TO POLICIES IN THE PLAN.  I CAN HELP WITH THIS IF YOU WANT AND IF THIS SEEMS LIKE A GOOD IDEA.
+<h4>Belize</h4><p>KA: GREGG, YOU ASKED FOR FEEDBACK ON THE CASE STUDY. I THINK WE SHOULD INCLUDE THE ONLINE LINK TO THE PLAN AND GIVE A COUPLE OF EXAMPLES OF HOW THESE DIFFERENT FIGURES WERE LINKED TO POLICIES IN THE PLAN.  I CAN HELP WITH THIS IF YOU WANT AND IF THIS SEEMS LIKE A GOOD IDEA.
 </p>
 To inform the design of the Integrated Coastal Zone Management Plan for Belize, we modeled three ecosystem services and produced biophysical and economic outputs for each: 1) catch and revenue from spiny lobster, 2) land protected and avoided damages from storms, and 3) visitation and expenditures from tourism.  We assessed outcomes for these three services for the <i>Current</i>, <i>Conservation</i>, <i>Informed Management</i> and <i>Development</i> scenarios.  National results for the entire country and each of the nine planning regions were produced and synthesized.
 <p></p><br><br>
