--- a/natcap_msp_usecases.html
+++ b/natcap_msp_usecases.html
@@ -80,7 +80,7 @@ var geojson = {
             title: 'Barbados',
             'marker-color': '#19a9e5',
             'marker-size': 'small',
-            url: 'http://www.naturalcapitalproject.org/where/wherewework.html'
+            url: 'docs/UseCase_Barbados_ProjectSummary.pdf'
         },
         geometry: {
             type: 'Point',
