--- a/scope.html
+++ b/scope.html
@@ -147,8 +147,8 @@ window.onload = function (evt) {
 </head>
 <body>
 <h1>Step 1: Scope</h1>
-<img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview</h2>
-It is difficult to overestimate the importance of the scoping step.  This is the stage in which you define the boundaries of the process to be undertaken including: What specific questions are we asking? Do we have the right participants involved (e.g., local champions, key stakeholders, staff with the necessary skills)? Are we addressing the issues that most matter to people here?  What is our geographic area? What is the timeline for the planning process and the time horizon for the eventual management plan?  Ultimately, getting this step right is critical to developing a shared vision and generating results that matter to decision-makers.
+<img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview and Goals</h2>
+It is difficult to overestimate the importance of the scoping step.  This is the stage in which you define the boundaries of the process to be undertaken including: What specific questions are we asking? Do we have the right participants involved (e.g., local champions, key stakeholders, staff with the necessary skills)? Are we addressing the issues that most matter to people here?  What is our geographic area and project scale? What is the timeline for the planning process and the time horizon for the eventual management plan?  Ultimately, getting this step right is critical to developing a shared vision and generating results that matter to decision-makers.
 <p></p>
 <img src="img/approach_Step1.png" usemap="#step1"><br>
 <map name="step1">
@@ -158,43 +158,43 @@ It is difficult to overestimate the importance of the scoping step.  This is the
   <area shape="circle" coords="634,86,55" href="synthesize.html" alt="Synthesize">
   <area shape="circle" coords="765,85,55" href="communicate.html" alt="Communicate">
 </map>
-Appropriate scoping serves to link the decisions, decision-makers, and scientific support staff to improve the quality of scientific outputs and ensure that results are salient, accessible and designed to meet real policy needs. In our experience, scoping is most successful in driving action when it includes several essential tasks: 
+Appropriate scoping serves to link the decisions, decision-makers, and scientific support staff to improve the quality of scientific outputs and ensure that results are salient, accessible and designed to meet real policy needs.<p></p>In our experience, scoping is most successful in driving action when it includes several essential tasks: 
 <ul>
 <li>Defining partnerships, roles and objectives</li>
 <li>Setting a work plan </li>
 <li>Identifying key decision questions</li> 
 <li>Selecting methods and tools for analysis</li>
 <li>Exploring available data </li>
-<li>Establishing a process to engage stakeholders, incorporate local knowledge, share and iterate upon results </li>
+<li>Establishing a process to engage stakeholders that incorporates local knowledge and shares results along the way (see <a href="iterate.html"><b>Iterate</b></a> step)</li>
 <li>Developing a rapport and genuine respect between partners </li>
 <li>Matching work plans with external timelines (e.g., windows to affect policy) and available resources </li>
 <li>Identifying essential expertise (e.g., planner, project manager, GIS tech) and for which phases these skills are required</li> 
 <li>Thinking ahead to a communication plan for sharing and receiving feedback on results and management recommendations</li>
 </ul>
-DF: IN OTHER PAGES, THE EDITS MERGE "GOALS" INTO "OVERVIEW". THAT WASN'T DONE ON THIS PAGE, BUT COULD BE DONE EASILY.
-<a name="goals"></a><div class="hr dotted clearfix">&nbsp;</div>
-<img src="img/headers/products_sm.png" align="left"><h2>&nbsp;&nbsp;Goals</h2><p></p>
-<ul>
-<li>Shared vision of practical outcomes including clear understanding of the questions to be answered and the results delivered</li>
-<li>Project team with well-articulated roles and responsibilities </li>
-<li>Work plan, including expected methodology and timeline</li>
-<li>Preliminary assessment of available and needed resources (e.g., data and information, local knowledge, team capacity, lines of communication to authorities and local experts, funding)</li>
-</ul>
+
+By solidifying (not necessarily finalizing) project goals and objectives, your team will be in a better position to tackle subsequent steps.  The following list includes some key outcomes from the scoping process:
+<br>
+&#x2714;&nbsp;Shared vision of practical outcomes including clear understanding of the questions to be answered and the results delivered<br>
+&#x2714;&nbsp;Project team with well-articulated roles and responsibilities <br>
+&#x2714;&nbsp;Work plan, including expected methodology and timeline<br>
+&#x2714;&nbsp;Preliminary assessment of available and needed resources<br>&nbsp;&nbsp;&nbsp;(e.g., data and information, local knowledge, team capacity, lines of communication to authorities and local experts, funding)<p></p>
+For more details on how scoping can help to solify project goals and expected outcomes, see our <a href="scope.html#use-cases">MSP use-cases</a> at the bottom of this page.
+<p></p>
 <a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
-<img src="img/headers/tips_sm.png" align="left"><h2>&nbsp;&nbsp;Tips</h2>
-<li>Remember that decision-making is exceedingly complex and have appropriate expectations. If your science is good and your science-policy process was well scoped and executed, your work is more likely to have an impact.  Have patience, it may take longer than you think.</li>
+<img src="img/headers/tips_sm.png" align="left"><h2>&nbsp;&nbsp;Tip</h2>
+Remember that decision-making is exceedingly complex and to have appropriate expectations. If your science is good and your science-policy process is well scoped and executed, your MSP project is more likely to have an impact.  Have patience, it may take longer than you think.
 <p></p>
 <a name="questions"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/scopeQ_sm.png" align="left"><h2>&nbsp;&nbsp;Sample MSP Scoping Questions</h2><p></p>
 <ul>
-<li>What are the marine and coastal issues people in this region care the most about? (e.g., preserving and enhancing existing uses, finding space for new and emerging uses)</li>
-<li>Where should we site particular kinds of activities? (e.g., conservation, restoration, extraction, development)</li>
-<li>What are the ecosystem components people care most about? (e.g., endangered species, special places, opportunities for important activities)</li>
+<li>What are the marine and coastal issues people in this region care the most about?<br>(e.g., preserving and enhancing existing uses, finding space for new and emerging uses)</li>
+<li>Where should we site particular kinds of activities?<br>(e.g., conservation, restoration, extraction, development)</li>
+<li>What are the ecosystem components people care most about?<br>(e.g., endangered species, special places, opportunities for important activities)</li>
 <li>What time horizon are you planning for?</li>
 <li>Who has the authority to do something with the information generated? Are they involved in the process or do they have good connections to it?</li>
-<li>Have we articulated clear, answerable questions? (e.g., those that can be addressed in the <a href="analyze.html"><b>Analyze</b></a> step) (CITE ARKEMA ET AL. BZ PNAS PAPER).</li>
+<li>Have we articulated clear, answerable questions?<br>(e.g., those that can be addressed in the <a href="analyze.html"><b>Analyze</b></a> step; see <a href="coming_soon.html">Arkema et al. 2015</a>)</li>
 <li>What is the timeline for the planning process and can we achieve our goals within the time allotted?</li>
-<li>How many iterations through the Steps in this concierge do we intend to do?  Who will we consult for feedback along the way?</li>
+<li>How many iterations through the steps in this concierge do we intend to undertake?  Who can we consult for feedback along the way?</li>
 <li>Will the models and tools we have at our disposal answer the management and science questions we are asking?</li>
 </ul>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
@@ -202,16 +202,18 @@ DF: IN OTHER PAGES, THE EDITS MERGE "GOALS" INTO "OVERVIEW". THAT WASN'T DONE ON
 <b>Q: Why is scoping important?  Is it okay to start scoping later in the process?</b><br>
 <i>A: Early scoping saves time down the road. By clearly outlining project objectives, scoping focuses efforts on key questions and ensures that the science-policy process will yield actionable results. Working with stakeholders and decision-makers from the beginning can save time (both yours and theirs). During this scoping step, we have found that issues we thought mattered, don't necessarily matter to local people. For example, monetary valuation of ecosystem services is helpful in some cases, but a distraction in others.</i><br>
 <p></p>
-<b>Q: How much scoping is <u>enough</u>?</b><br>
+<b>Q: How much scoping is <i>enough</i>?</b><br>
 <i>A: Scoping should match the scale of the project. Scoping can start with a brief description of work (e.g., report), but may end up being a longer, iterative process (see our Barbados example). Remember that scoping happens in stages and is typically part of an iterative process. Data limitations, combined with the need for further scenario development and synthesis of initial results, may require additional literature review, new partners, or the need for refined questions.</i><br>
 <p></p>
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/links_sm.png" align="left"><h2>&nbsp;&nbsp;Links</h2>
 <ul>
-<li>Douvere, F. (2008). "The importance of marine spatial planning in advancing ecosystem-based sea use management." <i>Marine Policy</i>, 32(5), 762-771. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X0800064X" target="_blank">doi:10.1016/j.marpol.2008.03.021</a></li>
-<li>Foley, Melissa M., et al. "Guiding ecological principles for marine spatial planning." <i>Marine Policy</i> 34.5 (2010): 955-966. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X10000436" target="_blank">doi:10.1016/j.marpol.2010.02.001</a></li>
-<li>Ehler, Charles, and Fanny Douvere. "Marine spatial planning, a step-by-step approach towards ecosystem-based management." (2009). <a href="http://hdl.handle.net/1834/4475
-" target="_blank">http://hdl.handle.net/1834/4475</a></li>
+<li>Ehler, Charles, and Fanny Douvere. "Marine spatial planning, a step-by-step approach towards ecosystem-based management." (2009). <a href="http://www.unesco-ioc-marinesp.be/uploads/documentenbank/d87c0c421da4593fd93bbee1898e1d51.pdf
+" target="_blank">http://hdl.handle.net/1834/4475</a> (See "Steps 1-5", pp. 26-62)</li>
+<li>Foley, Melissa M., et al. "Guiding ecological principles for marine spatial planning." <i>Marine Policy</i> 34.5 (2010): 955-966. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X10000436" target="_blank">    doi:10.1016/j.marpol.2010.02.001</a> (See "Section 3. Application")</li>
+<li>Halpern, Benjamin S., et al. "Near-term priorities for the science, policy and practice of Coastal and Marine Spatial Planning (CMSP)." <i>Marine Policy</i> 36.1 (2012): 198-205.<a href="http://www.sciencedirect.com/science/article/pii/S0308597X11000935" target="_blank"> doi:10.1016/j.marpol.2011.05.004</a> (See "Section 2.1. Process")</li>
+<li>Rosenthal, Amy, et al. "Process matters: a framework for conducting decision-relevant assessments of ecosystem services." <i>International Journal of Biodiversity Science, Ecosystem Services & Management</i> (2014): 1-15. <a href="docs/Rosenthal_etal_2014_IJBSESM.pdf" target="_blank">doi:10.1080/21513732.2014.966149</a> (See "Section 4.1. Scope")</li>
+<li>Waite, Richard, et al. "Coastal capital: ecosystem valuation for decision making in the Caribbean</a>." World Resources Institute, 2014. <a href="http://eprints.soton.ac.uk/362289/" target="_blank">http://eprints.soton.ac.uk/id/eprint/362289</a> (See "Phase 1: Scope", pp. 15-24)</li>
 <li><a href="http://openchannels.org/" target="_blank"><b>OpenChannels</b></a> - An online community of ocean planners and managers sharing experience, knowledge, and advice</li>
 <li><a href="http://searchmesh.org/default.aspx?page=1931" target="_blank"><b>MESH Scoping Tool</b></a> - A Flash interactive tool and guidance for undertaking an ocean  mapping/survey project</li>
 <li><a href="http://marineecosystemservices.org/" target="_blank"><b>Marine Ecosystem Services Partnership</b></a> - A searchable database of nearly 900 studies on marine ES valuation</li>
@@ -224,10 +226,31 @@ DF: IN OTHER PAGES, THE EDITS MERGE "GOALS" INTO "OVERVIEW". THAT WASN'T DONE ON
 Use the expand [+] button to learn more about this scoping step in the context of select NatCap use-cases.<a class="float right" href="#">top</a>
 <p></p>
 <h4>Barbados</h4>
-To aid in a coastal management plan for Barbados, NatCap worked with key organizational partners to create a formal literature review and gap analysis.  The report outlined the provisioning, regulating, and cultural ecosystem services of interest and identified threats to these services.  The project team then collected, reviewed, and synthesized available literature and spatial data.  In addition to this synthesis, preliminary runs of select InVEST models were used to identify data gaps.  The literature review and data gap assessment not only organized key information, but also served as a method to gain consensus about priority ecosystem services in Barbados and the steps needed to complete a marine spatial plan.
+To aid in the development of a coastal management plan for Barbados, NatCap worked with key organizational partners to scope our work.  As part of the scoping, we conducted a literature review and gap analysis. From this work and from conversations with key players in the region, we outlined the provisioning, regulating, and cultural ecosystem services of interest and identified threats to these services.  The project team then collected, reviewed, and synthesized available literature and spatial data.  In addition to this synthesis, preliminary runs of select InVEST models were used to identify data gaps.  The literature review and data gap assessment not only organized key information, but also served as a method to gain consensus about priority ecosystem services in Barbados and the steps needed to complete a marine spatial plan.<p></p>
+<li><u>Geographic area</u>: <b>Barbados</b></li>
+<li><u>Project team</u>: <b>Downstream Strategies, NatCap, Inter-American Development Bank (IDB), World Wildlife Fund, The Nature Conservancy</b></li>
+<li><u>Policy window and timeline</u>: <b>One-year pilot study funded by the IDB</b></li>
+<li><u>Important issues and ecosystem components</u>: Barbados faces a number of challenges in systematically managing coastal resources and risks in the face of a changing climate and increased development pressure, including (1) land use and development decisions that are disconnected from potential impacts to coastal zone environmental quality, (2) the availability and use of coastal risk information, and (3) the lack of comprehensive, integrated approaches for managing coastal risks that inform present and future development decisions at national and local levels.</li>
+<li><u>Specific questions asked</u>: (1) What is the current status of natural capital in the Coastal Zone Management Subareas of Barbados and how might that status change under alternative future management options?  Based on the top three prioritized ecosystem services for Barbados, which were: tourism/recreation, coastal protection, reef fishery. (2) How would changes in reef distribution and health affect the Barbados reef fishery, and how might this impact fishing livelihoods? (3) How would potential locations for marine management areas (MMAs) and reef restoration affect selected ecosystem services and natural capital scores?</li>
+<li><u>Expected outcomes</u>: (1) Justification for the priority ecosystem services that were selected and discussion of affected beneficiaries; (2) Identification of threats to coastal habitats; (3) Development of alternative future management scenarios; (4) Quantification of ecosystem services under each alternative development scenario and comparative analysis</li>
 <p></p>
-<h4>California</h4>
-Coming soon
+<h4>New England</h4>
+xxx<p></p>
+<li><u>Geographic area</u>: xxx</li>
+<li><u>Project team</u>: xxx</li>
+<li><u>Policy window and timeline</u>: xxx</li>
+<li><u>Important issues and ecosystem components</u>: xxx</li>
+<li><u>Specific questions asked</u>: xxx</li>
+<li><u>Expected outcomes</u>: xxx</li>
+<p></p>
+<h4>Bahamas</h4>
+xxx<p></p>
+<li><u>Geographic area</u>: Andros Island</li>
+<li><u>Project team</u>: Inter-American Development Bank, NatCap, TNC-Bahamas</li>
+<li><u>Policy window and timeline</u>: xxx</li>
+<li><u>Important issues and ecosystem components</u>: xxx</li>
+<li><u>Specific questions asked</u>: xxx</li>
+<li><u>Expected outcomes</u>: xxx</li>
 <p></p>
 </body>
 </html>
