--- a/tradeoff.html
+++ b/tradeoff.html
@@ -31,18 +31,20 @@
 <body>
 <h1>Tradeoff!</h1>
 <img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview</h2>
-Tradeoff! is a series of mapping games developed by NatCap that simply introduces concepts related to nature's benefits to people while mirroring our analytical approach with InVEST.  The process of preparing spatial data, running software tools, and appropriately interpreting results can be challenging.  Tradeoff! represents a more effective means to convey our approach to a broader audience, especially those who are not computer saavy or experience scientific modelers.  Currently, we offer two versions of Tradeoff!: 1) coastal zone management (called "Best Coast Belize!") and 2) terrestrial/freshwater (Agriculture Edition).<br>
+Tradeoff! is a series of mapping games developed by NatCap that simply introduces concepts related to nature's benefits to people while mirroring our analytical approach with InVEST.  The process of preparing spatial data, running software tools, and appropriately interpreting results can be challenging.  Tradeoff! represents a more effective means to convey our approach to a broader audience, especially those who are not computer saavy or experience scientific modelers.  Currently, we offer two versions of Tradeoff!: 1) coastal zone management (called "Best Coast Belize") and 2) terrestrial/freshwater (Agriculture Edition).<br>
 <p></p>
 <ul id="folio_scroller">
-<li><iframe src="http://www.youtube.com/embed/OZQ8OOs7QHQ?autoplay=1" width="600" height="300" frameborder="0" allowfullscreen></iframe></li>
+<li><span>Game board for our Best Coast Belize module.  Tradeoff! games are available for  public and private use.  NatCap charges a small materials fee that is payable by credit card using our secure, online system.</span><a href="http://tinyurl.com/cctd-belize" target="_blank"><img alt="" src="img/tradeoff_board.png" /></a></li>
 </ul>
 <p></p><br>
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/links_sm.png" align="left"><h2>&nbsp;&nbsp;Links</h2>
 <ul>
-<li>Verutes, Gregory M., and Amy Rosenthal. "Using simulation games to teach ecosystem service synergies and trade-offs." Environmental Practice 16.03 (2014): 194-204. doi: <a href="docs/Verutes_Rosenthal_2014_EP.pdf" target="_blank">http://dx.doi.org/10.1017/S1466046614000222</a></li>
-<li> <a href="https://www.worldwildlife.org/blogs/science-driven/posts/games-a-win-for-conservation" target="_blank"><b>WWF Science Driven</b></a> - A blog post about Tradeoff! and developing games for conservation
-<li><i>Would you like to play Tradeoff! with your organization?  <a href="mailto:gverutes@stanford.edu?Subject=Tradeoff!" target="_top">E-mail us</a> for details!</i></li>
+<li><a href="https://www.worldwildlife.org/blogs/science-driven/posts/games-a-win-for-conservation" target="_blank"><b>WWF Science Driven</b></a> - A blog post about Tradeoff! and developing games for conservation</li>
+<li><a href="docs/BCB_ModeratorScript.pdf" target="_blank"><b>Moderator script</b></a> - Provides facilitators with an outline for introducing the game and explaining the rules</li>
+<li><a href="http://tiny.cc/tradeoff" target="_blank"><b>Scoring calculator</b></a> - Compute team scores for Tradeoff! Ag Edition</li>
+<li>Verutes, Gregory M., and Amy Rosenthal. "Using simulation games to teach ecosystem service synergies and trade-offs." <i>Environmental Practice</i> 16.03 (2014): 194-204. doi: <a href="docs/Verutes_Rosenthal_2014_EP.pdf" target="_blank">http://dx.doi.org/10.1017/S1466046614000222</a></li>
+<p></p><i>Would you like to play Tradeoff! with your organization?  <a href="mailto:gverutes@stanford.edu?Subject=Tradeoff!" target="_top">E-mail us</a> for details!</i></li>
 <p></p>
 <a class="float right" href="#">top</a>
 <p></p><br>
